@@ -1,6 +1,7 @@
 Version 1.0.2 -- June 2009
 ------------------------------------------------------------------
 + Added setting for internal only fields
++ Added setting for user profile privacy
 + Tweaked edit settings screen a little
 + Tweaked some permissions
 
